<resources>
    <string name="app_name">Exploring Reddit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="view_subreddit">View subreddit</string>
    <string name="subreddit">subreddit</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_subreddit">Enter a subreddit</string>
    <string name="something_went_wrong">Something went wrong! Try refreshing the page.</string>
    <string name="device_offline">Your device is offline!</string>
    <string name="open">Open</string>
    <string name="private_sub">Private sub</string>
    <string name="sub_does_not_exist">Sub does not exist</string>
    <string name="no_more_posts">This sub has no more posts</string>
    <string name="subreddit_shortcut_short_label">subreddit</string>
    <string name="subreddit_shortcut_long_label">Open subreddit</string>
    <string name="shortcut_disabled_message">Disabled</string>
    <string name="aww_shortcut_short_label">r/aww</string>
    <string name="pics_shortcut_short_label">r/pics</string>
    <string name="cats_shortcut_short_label">r/cats</string>

</resources>
